# GroupShift

./: CMakeLists.txt  HookExample.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build-mod.yml
include/: GroupShiftPopup.hpp  PropertyShiftPopup.hpp  ShiftPopup.hpp
src/fixes/: InstantCountEditFix.cpp
src/overrides/: CollisionBlockPopup.cpp  ColorSelectPopup.cpp  SetGroupIDLayer.cpp  SetItemIDLayer.cpp  SetupCollisionTriggerPopup.cpp  SetupCountTriggerPopup.cpp  SetupInstantCollisionTriggerPopup.cpp  SetupInstantCountPopup.cpp  SetupItemCompareTriggerPopup.cpp  SetupItemEditTriggerPopup.cpp  SetupMoveCommandPopup.cpp  SetupObjectTogglePopup.cpp  SetupOpacityPopup.cpp  SetupPickupTriggerPopup.cpp  SetupRandAdvTriggerPopup.cpp  SetupRandTriggerPopup.cpp  SetupSpawnPopup.cpp
src/popups/: GroupShiftPopup.cpp  PropertyShiftPopup.cpp  ShiftPopup.cpp
